Changes to login to use rootScope.broadcast, with listeners in other controllers.  Wrapped question defaulting code in a promise to ensure profile exists. Changed planService.getProfile to only make one promise at a time

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -176,3 +176,12 @@ html, body{
   corder-radius:3px;
   padding:3px;
 }
+.nav > li > a:hover,
+.nav > li > a:focus {
+  background-color:unset;
+}
+
+.trip-question label:hover{
+  cursor:pointer;
+}
+
